--- a/themes/terminal/layouts/_default/single.html
+++ b/themes/terminal/layouts/_default/single.html
@@ -22,7 +22,7 @@
     {{ end }}
   </span>
   {{ end }}
-Reading time: {{ math.Round (div (countwords .Content) 220.0) }} minutes.
+{{ math.Round (div (countwords .Content) 220.0) }} minutes read.
   {{ with .Params.Cover }}
   <img src="{{ . | absURL }}" class="post-cover" />
   {{ end }}
